--- a/api/src/docs/asciidoc/index.adoc
+++ b/api/src/docs/asciidoc/index.adoc
@@ -1,11 +1,23 @@
 = Getting Started With Spring REST Docs
 
-This is an example output for a service running at http://localhost:8080:
+=== index
 
 .request
 include::{snippets}/index/http-request.adoc[]
+include::{snippets}/index/curl-request.adoc[]
 
 .response
 include::{snippets}/index/http-response.adoc[]
+
+
+
+=== chat
+
+
+.request
+include::{snippets}/chat/http-request.adoc[]
+include::{snippets}/chat/curl-request.adoc[]
+.response
+include::{snippets}/chat/http-response.adoc[]
 
 As you can see the format is very simple, and in fact you always get the same message.
